--- a/StudentMgmtAPI/Pages/Index.cshtml
+++ b/StudentMgmtAPI/Pages/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@page
-@model StudentMgmtAPI.Pages.IndexModel
+@page
+@model StudentMgnt_WebAPI.Pages.IndexModel
 @{
 }
-
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -12,6 +11,7 @@
 </head>
 
 <body style="background-color:bisque;">
+
     <div>
         <!-- Navigation bar code -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-warning">
@@ -83,12 +83,62 @@
             </div>
         </div>
     </div>
+
+    <!-- below mentioned code will create the template to Update a new book -->
+    <div class="modal" tabindex="-1" role="dialog" id="UpdateStudents">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Update Student Data</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <input type="hidden" class="form-control" id="Update_id" aria-describedby="IdHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="Student_Name">Student Name</label>
+                            <input type="text" class="form-control" id="Update_student_Name" aria-describedby="Student_NameHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="Email">Email</label>
+                            <input type="text" class="form-control" id="Update_student_Email" aria-describedby="EmailHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="Mobile">Mobile</label>
+                            <input type="text" class="form-control" id="Update_student_Mobile" aria-describedby="MobileHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="Course_Name">Course Name</label>
+                            <input type="text" class="form-control" id="Update_course_Name" aria-describedby="course_NameHelp">
+                        </div>
+                        <div class="form-group">
+                            <label for="Course_Duration">Course Duration</label>
+                            <input 0. class="form-control" id="Update_course_Duration" aria-describedby="course_DurationHelp">
+                        </div>
+                        <div class="form-group" id="update_result">
+
+
+                        </div>
+                        <button type="button" class="btn btn-primary" onclick="updateStudent()">Update</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
     <! -- java script files that will help to link the front end and back end -->
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
 
     <script>
         var uri = 'api/Students';
@@ -97,10 +147,8 @@
             $.getJSON(uri)
                 .done(function (data) {
                     $("#StudentsTemplate").tmpl(data).appendTo("#allStudents");
-
                 });
         });
-
 
         // function to get all students data and show on web page
         function getAllStudents() {
@@ -110,6 +158,7 @@
                     $("#StudentsTemplate").tmpl(data).appendTo("#allStudents");
                 });
         }
+
 
         // function to add data for new student
         function addStudent() {
@@ -132,13 +181,73 @@
                 contentType: "application/json; charset=utf-8"
             }).done(function (response) {
                 $("#result").html("New Student data is added successfully");
-                    getAllStudents();
+                getAllStudents();
             }).fail(function (jqXHR, textStatus) {
                 $("#result").html("An error occured when Adding the student record.");
             });
         }
-    </script>
 
+        //funtion to delete a particular student based on id
+        function remove(id) {
+            var yes = confirm("Are you sure you want to delete this student?");
+            if (yes) {
+                $.ajax({
+                    type: "DELETE",
+                    url: uri + "/" + id,
+                }).done(function (response) {
+                    $("#result").html("Student data is deleted successfully");
+                    getAllStudents();
+                }).fail(function (jqXHR, textStatus) {
+                    $("#result").html("An error occured when deleting the student record.");
+                });
+            }
+        }
+
+        // funtion to fill the data into update template
+        function getStudentForUpdate(id) {
+            $.ajax({
+                type: "GET",
+                url: uri + "/" + id,
+                contentType: "application/json"
+            }).done(function (response) {
+                $('#Update_id').val(response.id);
+                $('#Update_student_Name').val(response.student_Name);
+                $('#Update_student_Email').val(response.student_Email);
+                $('#Update_student_Mobile').val(response.student_Mobile);
+                $('#Update_course_Name').val(response.course_Name);
+                $('#Update_course_Duration').val(response.course_Duration);
+            });
+        }
+
+        // function to update data of the student
+        function updateStudent() {
+            var _student_Name = $('#Update_student_Name').val();
+            var _student_Email = $('#Update_student_Email').val();
+            var _student_Mobile = $('#Update_student_Mobile').val();
+            var _course_Name = $('#Update_course_Name').val();
+            var _course_Duration = $('#Update_course_Duration').val();
+            var StudentUpdate = {
+                id: parseInt($('#Update_id').val()),
+                student_Name: _student_Name,
+                student_Email: _student_Email,
+                student_Mobile: _student_Mobile,
+                course_Name: _course_Name,
+                course_Duration: _course_Duration
+            };
+            $.ajax({
+                type: "PUT",
+                url: uri + "/" + $('#Update_id').val(),
+                data: JSON.stringify(StudentUpdate),
+                contentType: "application/json; charset=utf-8"
+            }).done(function (response) {
+                $("#update_result").html("Record is updated Successfully");
+                getAllStudents();
+            }).fail(function (jqXHR, textStatus) {
+                $("#update_result").html("An error occured when updating student record.");
+            });
+        }
+
+    </script>
 
     <!-- below mentioned code will create the template on the web page to display all books -->
     <script id="StudentsTemplate" type="text/x-jquery-tmpl">
@@ -158,5 +267,6 @@
             </div>
         </div>
     </script>
+
 
 </body>
